added a form for adding a post

--- a/hood/templates/home.html
+++ b/hood/templates/home.html
@@ -28,10 +28,10 @@
                         style="width: 25rem; height: 15rem;">
 
                     <div class="card-body">
-                        <p style="color: rgb(4, 11, 39); font-family: 'Times New Roman', Times, serif;font-weight: bold;font-size: 17px;"><i> {{ neighbourhood.hood_name }}</i>
-                            <span style="font-weight: bold; font-size: 17px;font-family: 'Kaushan Script', cursive;">| {{ neighbourhood.location }}</span>
+                        <p style="color: rgb(0, 255, 200); font-family: 'Lucida Console';font-weight: bold;font-size: 17px;"><i> {{ neighbourhood.hood_name }}</i>
+                            <span style="font-weight: bold; font-size: 17px;font-family: 'Lucida Console';">| {{ neighbourhood.location }}</span>
                             <span style="float: right;"><a href="{%url 'detail' neighbourhood.id %}"><button
-                                        class="btn btn-primary btn-sm" style="background-color: rgb(4, 11, 39);">Join Hood</button></a></span>
+                                        class="btn btn-primary btn-sm" style="background-color: rgb(0, 255, 200);">Join Hood</button></a></span>
                         </p>
                     </div>
                 </div>
