--- a/hood/templates/new_business.html
+++ b/hood/templates/new_business.html
@@ -21,7 +21,7 @@
 
   <body style="background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url('https://i.postimg.cc/brL0ZPPW/amazu.jpg');background-size: cover; height: 80vh; background-position: center;">
     <div class="container" style="margin-top:5%">
-      <h1 class="text-center" style="margin-bottom: 3%;color: grey;font-family: 'Lucida Console';color: white;">Add Business</h1>
+      <h1 class="text-center" style="margin-bottom: 3%;color: grey;font-family: 'Times New Roman', Times, serif;color: rgb(8, 3, 3);">Add Business</h1>
       <div class="row">
 
         <!-- Empty div -->
@@ -34,7 +34,7 @@
                 {%csrf_token%}
 
                 {% bootstrap_form form%}
-                <input type="submit" class="btn btn-sm" style="background-color: rgb(0, 255, 200);color: white;" value="Submit">
+                <input type="submit" class="btn btn-sm" style="background-color: rgb(0, 255, 200);color: rgb(8, 3, 3);" value="Submit">
               </form>
               
 
