--- a/hood/templates/base.html
+++ b/hood/templates/base.html
@@ -8,9 +8,9 @@
   <meta charset="utf-8">
 
   {% if title %}
-  <title>myNeighborhood - {{title}}</title>
+  <title>Quartier - {{title}}</title>
   {% else %}
-  <title> myNeighborhood </title>
+  <title> Quartier </title>
   {% endif %}
 
 
